# CalcTokens

./: .calctokens.db  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
.mimocode/plans/: 1781234360776-proud-squid.md
crates/calctokens-core/: Cargo.toml
crates/calctokens-core/src/: clients.rs  lib.rs  message_cache.rs  paths.rs  provider_identity.rs  scanner.rs
crates/calctokens-core/src/pricing/: aliases.rs  cache.rs  litellm.rs  lookup.rs  mod.rs  openrouter.rs
crates/calctokens-core/src/sessions/: antigravity.rs  claudecode.rs  codex.rs  copilot.rs  cursor.rs  droid.rs  gemini.rs  kilo.rs  kimi.rs  mimocode.rs  mod.rs  opencode.rs  utils.rs
src/: antigravity.rs  main.rs
