[workspace]
resolver = "2"
members = [
    ".",
    "crates/calctokens-core",
]

[package]
name = "CalcTokens"
version = "0.8.3"
edition = "2021"

[[bin]]
name = "calctokens"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tabled = "0.16"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
calctokens-core = { path = "crates/calctokens-core" }

[profile.release]
lto = true
codegen-units = 1
