[package]
name = "calctokens-core"
version = "1.1.6"
edition = "2021"
authors = ["Felix Lau"]
license = "MIT"
description = "Core library for calctokens - session parsing, scanning, aggregation, pricing"

[lib]
crate-type = ["rlib"]

[dependencies]
rayon = "1.10"
simd-json = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
dirs = "5"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"
tracing = "0.1"
sha2 = "0.10"
libc = "0.2"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
